# ml-compiler-opt-framework

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  benchmark.cpp
data/: conv2d.ll  matmul.ll  simple_conv2d.ll  test_input.ll
src/: CMakeLists.txt  main.cpp
src/passes/: CMakeLists.txt  MemoryCoalescing.cpp  MemoryCoalescing.h
tests/: CMakeLists.txt  test_basic.cpp  test_memory_coalescing.cpp  test_memory_coalescing_ir.cpp
tests/test_files/: strided_access.ll
